apps/sm-python-test-repo-02/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-python-test-repo-02
  namespace: dev
  labels:
    app: sm-python-test-repo-02
    backstage.io/kubernetes-id: sm-python-test-repo-02
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-python-test-repo-02
  template:
    metadata:
      labels:
        app: sm-python-test-repo-02
        backstage.io/kubernetes-id: sm-python-test-repo-02
        environment: dev
    spec:
      containers:
        - name: sm-python-test-repo-02
          image: sureshmavp1/sm-python-test-repo-02:1.0.1
          ports:
            - containerPort: 5000
