apps/sm-python-test-repo-02/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-python-test-repo-02
  namespace: dev
  labels:
    backstage.io/kubernetes-id: sm-python-test-repo-02
    environment: dev
spec:
  selector:
    app: sm-python-test-repo-02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sm-python-test-repo-02-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: sm-python-test-repo-02.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: sm-python-test-repo-02
#             port:
#               number: 80
