apps/sm-python-test-repo-02/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-python-test-repo-02
  namespace: dev
  labels:
    backstage.io/kubernetes-id: sm-python-test-repo-02
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /sm-python-test-repo-02-dev(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: sm-python-test-repo-02
                port:
                  number: 80
